added setID to Participant, cleaned up template files, cleaned up ManageParticipantsCtrl